--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -27,6 +27,16 @@
                         Tech
                     </a>
                 </li>
+                <li class="navbar__item">
+                    <a href="/" class="navbar__links">
+                        Products
+                    </a>
+                </li>
+                <li class="navbar__btn">
+                    <a href="/" class="button">
+                        Sign Up
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
