--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -19,22 +19,22 @@
             <ul class="navbar__menu">
                 <li class="navbar__item">
                     <a href="/" class="navbar__links">
-                        Home
+                        About
                     </a>
                 </li>
                 <li class="navbar__item">
                     <a href="/tech.html" class="navbar__links">
-                        Tech
+                        Interests
                     </a>
                 </li>
                 <li class="navbar__item">
                     <a href="/" class="navbar__links">
-                        Products
+                        Projects
                     </a>
                 </li>
                 <li class="navbar__btn">
                     <a href="/" class="button">
-                        Sign Up
+                        Resume
                     </a>
                 </li>
             </ul>
