--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">YITIAN</a>
+            <a href="/" id="navbar__logo">YITIAN GAO</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
