added more website components

--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yitian is cool</title>
     <link rel="stylesheet" href="test.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
@@ -40,6 +41,21 @@
             </ul>
         </div>
     </nav>
+    <!-- Main section -->
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>Hello!</h1>
+                <p>This website is a personal project. I find front-end development
+                    interesting because I can actually see my code DO something. It's very exciting
+                    to see the things that I can already create with the knowledge I have obtained so far!
+                </p>
+            </div>
+            <div class="main__img__container">
+                <img src="/" alt="pic" class="main__image">
+            </div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
