--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Navbar section -->
     <nav class="navbar">
         <div class="navbar__container">
             <a href="/" id="navbar__logo">YITIAN GAO</a>
@@ -54,6 +55,14 @@
             <div class="main__img__container">
                 <img src="/" alt="pic" class="main__image">
             </div>
+        </div>
+    </div>
+    <!-- Footer Section -->
+    <div class="footer__container">
+        <div class="footer__bar">
+            <a href="/" class="footer__links">About</a>
+            <a href="/" class="footer__links">Contact</a>
+            <a href="/" class="footer__links">Social</a>
         </div>
     </div>
     <script src="app.js"></script>
