--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/tech.html" class="navbar__links">
+                    <a href="/about_me.html" class="navbar__links">
                         Interests
                     </a>
                 </li>
