--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -53,17 +53,32 @@
                 </p>
             </div>
             <div class="main__img__container">
-                <img src="/" alt="pic" class="main__image">
+                <img src="images/pic1.jpg" alt="pic" class="main__image">
             </div>
         </div>
     </div>
     <!-- Footer Section -->
     <div class="footer__container">
-        <div class="footer__bar">
-            <a href="/" class="footer__links">About</a>
-            <a href="/" class="footer__links">Contact</a>
-            <a href="/" class="footer__links">Social</a>
-        </div>
+        <ul class="footer__bar">
+            <li class="footer__item">
+                <h1 class="footer__header">About</h1>
+                <a href="/" class="footer__links">This Website</a>
+                <a href="/" class="footer__links">The Pictures</a>
+                <a href="/" class="footer__links">Special Thanks</a>
+            </li>
+            <li class="footer__item">
+                <h1 class="footer__header">Contact</h1>
+                <a href="/" class="footer__links">Email</a>
+                <a href="/" class="footer__links">Linked In</a>
+                <a href="/" class="footer__links">Phone</a>
+            </li>
+            <li class="footer__item">
+                <h1 class="footer__header">Social</h1>
+                <a href="/" class="footer__links">Facebook</a>
+                <a href="/" class="footer__links">Github</a>
+                <a href="/" class="footer__links">Twitter</a>
+            </li>
+        </ul>
     </div>
     <script src="app.js"></script>
 </body>
