figuring out how to fix the image with js

--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -43,7 +43,7 @@
         </div>
     </nav>
     <!-- Main section -->
-    <div class="main__container">
+    <div class="main__container" id="main__container">
         <div class="main__content">
             <h1>Hello!</h1>
             <p>This website is a personal project. I find front-end development
@@ -51,7 +51,7 @@
                 to see the things that I can already create with the knowledge I have obtained so far!
             </p>
         </div>
-        <div class="main__img__container">
+        <div class="main__img__container" id="main__image__container">
             <img src="images/pic1.jpg" alt="pic" class="main__image">
         </div>
     </div>
