--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -47,8 +47,8 @@
         <div class="main__content">
             <h1>Hello!</h1>
             <p>This website is a personal project. I find front-end development
-                interesting because I can actually see my code DO something. It's very exciting
-                to see the things that I can already create with the knowledge I have obtained so far!
+                interesting because I can actually see my code <span style="color:#ff8177; font-weight:700">DO</span> something. It's very exciting
+                to see the things that I can already create with the knowledge I have obtained so far.
             </p>
         </div>
         <div class="main__img__container" id="main__image__container">
