--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar section -->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">YITIAN GAO</a>
+            <a href="index.html" id="navbar__logo">YITIAN GAO</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -20,12 +20,12 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">
+                    <a href="about_me.html" class="navbar__links">
                         About
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/about_me.html" class="navbar__links">
+                    <a href="/" class="navbar__links">
                         Interests
                     </a>
                 </li>
