fixed main mobile

--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -43,16 +43,18 @@
         </div>
     </nav>
     <!-- Main section -->
-    <div class="main__container" id="main__container">
-        <div class="main__content">
-            <h1>Hello!</h1>
-            <p>This website is a personal project. I find front-end development
-                interesting because I can actually see my code <span style="color:#ff8177; font-weight:700">DO</span> something. It's very exciting
-                to see the things that I can already create with the knowledge I have obtained so far.
-            </p>
-        </div>
-        <div class="main__img__container" id="main__image__container">
-            <img src="images/pic1.jpg" alt="pic" class="main__image">
+    <div class="main" id="main">
+        <div class="main__container" id="main__container">
+            <div class="main__content">
+                <h1>Hello!</h1>
+                <p>This website is a personal project. I find front-end development
+                    interesting because I can actually see my code <span style="color:#ff8177; font-weight:700">DO</span> something. It's very exciting
+                    to see the things that I can already create with the knowledge I have obtained so far.
+                </p>
+            </div>
+            <div class="main__img__container" id="main__image__container">
+                <img src="images/pic1.jpg" alt="pic" class="main__image">
+            </div>
         </div>
     </div>
     <!-- Footer Section -->
