added more pages

--- a/js-tutorial/about_me.html
+++ b/js-tutorial/about_me.html
@@ -43,14 +43,16 @@
         </div>
     </nav>
     <!-- Main section -->
-    <div class="main__container" id="main__container">
-        <div class="main__content">
-            <h1>Hello!</h1>
-            <p>This is the about me page.
-            </p>
-        </div>
-        <div class="main__img__container" id="main__image__container">
-            <img src="images/pic1.jpg" alt="pic" class="main__image">
+    <div class="main" id="main">
+        <div class="main__container" id="main__container">
+            <div class="main__content">
+                <h1>About Me</h1>
+                <p>This is the about me page.
+                </p>
+            </div>
+            <div class="main__img__container" id="main__image__container">
+                <img src="images/pic2.jpg" alt="pic" class="main__image">
+            </div>
         </div>
     </div>
     <!-- Footer Section -->
