--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -25,17 +25,17 @@
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">
+                    <a href="interests.html" class="navbar__links">
                         Interests
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">
+                    <a href="projects.html" class="navbar__links">
                         Projects
                     </a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/" class="button">
+                    <a href="resume.html" class="button">
                         Resume
                     </a>
                 </li>
